test_scores/negative_dimers/features/P49761.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P49761.pkl.xz